--- a/.env
+++ b/.env
@@ -17,3 +17,10 @@
 APP_ENV=dev
 APP_SECRET=be29c6fa48f5ad16a6785a3e07f029b0
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+DATABASE_URL="mysql://root:123456@127.0.0.1:3306/core?serverVersion=5.7"
+###< doctrine/doctrine-bundle ###
