--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "friendsofsymfony/rest-bundle": "^3.0",
+        "google/cloud-translate": "^1.10",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "psr/cache": "^1.0",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
